--- a/yeom.ji/index.html
+++ b/yeom.ji/index.html
@@ -220,7 +220,7 @@
 <!-- ANIMAL ADD PAGE -->
 	<section data-role="page" id="animal-add-page">
 		<header data-role="header">
-			<h1>Add a new Doggie</h1>
+			<h1>Add a New Doggie</h1>
 			<ul>
 				<!-- <li class="btn-back"><a href="#" data-rel="back">Back</a></li> -->
 				<li><a href="#" data-rel="back"><img src="img/icon/back_white.png" alt="" class="icon-back"></a></li>
@@ -236,6 +236,7 @@
 <!-- 				<div class="form-control">
 					<button data-role="none" class="form-button" style="background-color: var(--color-neutral-mediumer); color: var(--color-main-medium)"><a href="#">Click here to add a photo</a></button>
 				</div> -->
+
 				<div class="form-control">
 					<label for="animal-add-name" class="form-label">Name</label>
 					<input id="animal-add-name" type="text" class="form-input" data-role="none" placeholder="Name of the dog">
@@ -311,7 +312,7 @@
 			<div class="overscroll">
 				<form id="location-add-form" data-ajax="false" style="padding: 1em">
 					
-					<div class="form-control animal-profile-image">
+ 					<div class="form-control animal-profile-image">
 						<img src="https://via.placeholder.com/400/?text=Upload>" alt="">	
 					</div>
 
@@ -319,13 +320,6 @@
 						<input type="hidden" id="location-add-icon">
 						<label class="image-uploader thumbnail">
 						   <input type="file" data-role="none" id="location-add-input">
-						</label>
-					</div> -->
-
-<!-- 					<div>
-						<input type="hidden" id="location-add-image">
-						<label class="image-uploader thumbnail">
-							<input type="file" data-role="none" id="location-add-upload">
 						</label>
 					</div> -->
 
